fix body scroll overflow

--- a/src/assets/styles/utils.scss
+++ b/src/assets/styles/utils.scss
@@ -24,9 +24,6 @@
   --overlay-primary: rgb(0 0 0 / 0.3);
 
   // Propery Variables
-  --padding-desktop-width: 40px;
-  --padding-tablet-width: 30px;
-  --padding-mobile-width: 20px;
   --padding-desktop-header-height: 20px;
   --padding-mobile-header-height: 15.5px;
 }
