--- a/src/components/Common/Header/Navigation/Navigation.module.scss
+++ b/src/components/Common/Header/Navigation/Navigation.module.scss
@@ -1,7 +1,6 @@
 @import "assets/styles/utils.scss";
 
 .component {
-  position: relative;
   display: flex;
   align-items: center;
 }
@@ -132,13 +131,11 @@
 
   .navigation {
     position: absolute;
-    // Отклонение top (padding-top у Header), left (padding mobile у Positioner), padding-top (кастомный)
-    // требуется т.к. navButton сохраняет своё положение, не рендерится заново
-    top: calc(var(--padding-mobile-header-height) * -1);
-    left: calc(var(--padding-mobile-width) * -1);
+    top: 0;
+    left: 0;
     z-index: 1;
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     padding-top: 45px;
     background-color: var(--background-primary);
