--- a/src/components/Common/Positioner/Positioner.module.scss
+++ b/src/components/Common/Positioner/Positioner.module.scss
@@ -5,17 +5,17 @@
   align-items: center;
   max-width: 1024px;
   margin: 0 auto;
-  padding: 0 var(--padding-desktop-width);
+  padding: 0 40px;
 }
 
 @include viewport-1023 {
   .component {
-    padding: 0 var(--padding-tablet-width);
+    padding: 0 30px;
   }
 }
 
 @include viewport-767 {
   .component {
-    padding: 0 var(--padding-mobile-width);
+    padding: 0 20px;
   }
 }
